--- a/Templates/main.html
+++ b/Templates/main.html
@@ -8,7 +8,6 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/main.css'%}"> 
-    <link rel="stylesheet" href="{% static 'css/BukuPanduan.css'%}">
 
 
 </head>
@@ -22,7 +21,7 @@
             <div class="card card1">
               <div class="card-head card1-2" id="headingOne">
                 <h2 class="mb-0">
-                    <a class="btn btn-link btn-block text-left button1" type="button" href="https://www.google.com">
+                    <a class="btn btn-link btn-block text-left button1" type="button" href="{% url 'home' %}">
                         <div class="button-content">
                             <svg width="1.25em" height="1.25em" viewBox="0 0 16 16" class="bi bi-house-door-fill house_icon" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M6.5 10.995V14.5a.5.5 0 0 1-.5.5H2a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .146-.354l6-6a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 .146.354v7a.5.5 0 0 1-.5.5h-4a.5.5 0 0 1-.5-.5V11c0-.25-.25-.5-.5-.5H7c-.25 0-.5.25-.5.495z"/>
@@ -188,7 +187,7 @@
                   Hello, {{user.first_name}}
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">Pengaturan profil</a>
+                  <a class="dropdown-item" href="{% url 'pengaturan_Akun' %}">Pengaturan profil</a>
                   <a class="dropdown-item" href="#">Informasi penting</a>
                   <a class="dropdown-item" href="#">Settings</a>
                   <div class="dropdown-divider"></div>
@@ -198,7 +197,7 @@
             </ul>
             <div id="container">
               <div class="avatar">
-                <img src="https://images.unsplash.com/photo-1531427186611-ecfd6d936c79?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1868&q=80" alt="">
+                <img src="{{request.user.profile_picture.url}}" alt="">
               </div>
             </div>
           </div>  
