--- a/Templates/main.html
+++ b/Templates/main.html
@@ -17,22 +17,22 @@
         <img src="https://lms.prasetiyamulya.ac.id/pluginfile.php/1/core_admin/logo/0x200/1601623298/logo_upm_putih.png" class="prasmul_logo pt-3">
 
         <!--Navigation Menu-->
+
         <div class="accordion navigation_menu pt-3" id="accordionExample">
-            <div class="card card1">
-              <div class="card-head card1-2" id="headingOne">
-                <h2 class="mb-0">
-                    <a class="btn btn-link btn-block text-left button1" type="button" href="{% url 'home' %}">
-                        <div class="button-content">
-                            <svg width="1.25em" height="1.25em" viewBox="0 0 16 16" class="bi bi-house-door-fill house_icon" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M6.5 10.995V14.5a.5.5 0 0 1-.5.5H2a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .146-.354l6-6a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 .146.354v7a.5.5 0 0 1-.5.5h-4a.5.5 0 0 1-.5-.5V11c0-.25-.25-.5-.5-.5H7c-.25 0-.5.25-.5.495z"/>
-                                <path fill-rule="evenodd" d="M13 2.5V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
-                            </svg>
-                            Home
-                        </div>
-                  </a>
-                </h2>
-              </div>
+          <div class="card card1">
+            <div class="card-head card1-2" id="headingOne">
+              <h2 class="mb-0"></h2>
+                <a class="btn btn-link btn-block text-left button1" type="button" href="{% url 'Informasi_Umum' %}">  
+                  <div class="button-content">
+                      <svg width="1.25em" height="1.25em" viewBox="0 0 16 16" class="bi bi-info-circle-fill house_icon" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                      <path fill-rule="evenodd" d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM8 5.5a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
+                      </svg>
+                      Informasi Umum
+                  </div>
+                </a>
+              </h2>
             </div>
+          </div>
 
             <div class="card card1">
               <div class="card-head card1-2" id="headingTwo">
@@ -68,26 +68,22 @@
                       </button>
                     </h2>
                   </div>
+                  {% if roles == 'Admin' %}
+                  <div id="collapseFour" class="collapse buttonTest2" aria-labelledby="headingFour" data-parent="#accordionExampleTwo">
+                    {% for prodi in semua_prodi %}
+                    <a class="btn btn-link btn-block text-left button1 button-prodi" type="button" href="https://www.google.com">
+                      {{prodi.nama_prodi}}
+                    </a>
+                    {% endfor %}
+                  </div>
+                  {% endif %}
+                  {% if roles == 'Faculty Member' %}
                   <div id="collapseFour" class="collapse buttonTest2" aria-labelledby="headingFour" data-parent="#accordionExampleTwo">
                     <a class="btn btn-link btn-block text-left button1 button-prodi" type="button" href="https://www.google.com">
-                      Business Mathematics
-                    </a>
-                    <a class="btn btn-link btn-block text-left button1 button-prodi" type="button" href="https://www.google.com">
-                      Food Business Technology
-                    </a>
-                    <a class="btn btn-link btn-block text-left button1 button-prodi" type="button" href="https://www.google.com">
-                      Renewable Energy Engineering
-                    </a>
-                    <a class="btn btn-link btn-block text-left button1 button-prodi" type="button" href="https://www.google.com">
-                      Computer System Engineering
-                    </a>
-                    <a class="btn btn-link btn-block text-left button1 button-prodi" type="button" href="https://www.google.com">
-                      Software Engineering
-                    </a>
-                    <a class="btn btn-link btn-block text-left button1 button-prodi" type="button" href="https://www.google.com">
-                      Product Design Engineering
+                      {{prodi}}
                     </a>
                   </div>
+                  {% endif %}
                 </div>
               </div>
             </div>
@@ -150,20 +146,7 @@
               </div>
             </div>
 
-            <div class="card card1">
-              <div class="card-head card1-2" id="headingOne">
-                <h2 class="mb-0"></h2>
-                  <a class="btn btn-link btn-block text-left button1" type="button" href="{% url 'Informasi_Umum' %}">  
-                    <div class="button-content">
-                        <svg width="1.25em" height="1.25em" viewBox="0 0 16 16" class="bi bi-info-circle-fill house_icon" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd" d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM8 5.5a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
-                        </svg>
-                        Informasi Umum
-                    </div>
-                  </a>
-                </h2>
-              </div>
-            </div>
+            
         </div>
     </section> 
 
