--- a/Templates/DeleteConfirmation.html
+++ b/Templates/DeleteConfirmation.html
@@ -19,9 +19,8 @@
     <form method="POST"> 
         <!-- Security token by Django -->
         {% csrf_token %} 
-        Are you want to delete this item ? 
-        <input type="submit" value="Yes" /> 
-        <a href="/">Cancel </a> 
+        <p>Are you sure you want to delete "{{ object }}"?</p>
+        <input type="submit" value="Confirm">
     </form> 
 </div> 
     <!-- Optional JavaScript -->
