--- a/Templates/InformasiUmum/SubFileInformasiUmum1.html
+++ b/Templates/InformasiUmum/SubFileInformasiUmum1.html
@@ -21,7 +21,7 @@
       <h3 class="font-weight-bold">{{judul2.nama_folder}}</h3>
       <p class="font-weight-light">Universitas Prasetiya Mulya</p>
       
-      <a class="btn btn-primary">
+      <a class="btn btn-primary" href="{% url 'AddSubFile_02' pk %}">
           <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-plus-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
               <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
@@ -38,7 +38,6 @@
       {% for file in subfile2 %}
       <div class="col-sm-6" data-role="card-menus">
         <div class="card card3">
-          <img src="https://images.unsplash.com/photo-1544396821-4dd40b938ad3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1053&q=80" class="card-img-top card3-img" alt="">
           <div class="card-body">
             <div class="card-inside">
                 <div class="card-text-inside">
@@ -47,7 +46,8 @@
                 </div>
                 <div>
                     <a href="{% static file.file_attachment.url %}" class="btn btn-success mr-3 btn-card-menu">Open</a>
-                    <a href="#" class="btn btn-warning mr-3 btn-card-menu">Edit</a>
+                    <a href="{% url 'UpdateSubFile_02' pk=file.id %}" class="btn btn-warning mr-3 btn-card-menu">Edit</a>
+                    <a href="{% url 'DeleteSubFile_02' pk=file.id %}" class="btn btn-danger mr-3 btn-card-menu">Delete</a>
                 </div>
             </div>
           </div>
