--- a/Templates/InformasiUmum/InformasiUmum.html
+++ b/Templates/InformasiUmum/InformasiUmum.html
@@ -31,6 +31,21 @@
       {%endfor%}
     </div>
   </section>
+  
+  <!--
+    <section class="page-title">
+      <div class="list-group">
+        <div type="button" class="list-group-item list-group-item-action button list-main" data-role="list-menus">
+            <a href="{% url 'sub_informasi_umum' item.id %}" class="text-decoration-none text-reset">Business Mathematics</a>
+            <div>
+                <a href="#" class="btn btn-warning btn-card-menu">Edit</a>
+                <a href="#" class="btn btn-danger btn-card-menu">Delete</a>
+            </div>
+        </div>
+      </div>
+    </section>
+  -->
+  
 
 {% endblock %}
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
