--- a/Templates/AMIProdi.html
+++ b/Templates/AMIProdi.html
@@ -4,15 +4,15 @@
 <section>
   <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="{% url 'Informasi_Umum' %}">Informasi Umum</a></li>
+        <li class="breadcrumb-item"><a href="{% url 'Informasi_Umum' %}">AMI {{nama_prodi}}</a></li>
       </ol>
   </nav>
 </section>
 
   <section class="page-title" style="margin-left: 17.9rem; ">
-      <h3 class="font-weight-bold">Informasi Umum</h3>
+      <h3 class="font-weight-bold">AMI {{nama_prodi}}</h3>
       <p class="font-weight-light">Universitas Prasetiya Mulya</p>
-      <a class="btn btn-primary">
+      <a class="btn btn-primary" href="{% url 'AddSubFolder_01' pk %}">
           <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-plus-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
               <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
@@ -23,11 +23,14 @@
 
   <section class="page-title" style="margin-left: 17.9rem; margin-right: 4rem;">
     <div class="list-group">
-      {%for item in folder%}
-        
-        <a type="button" class="list-group-item list-group-item-action button" href="{% url 'sub_informasi_umum' item.id %}">
-          {{item.nama_folder}}
-        </a>
+      {%for item in semua_folder%}
+        <div type="button" class="list-group-item list-group-item-action button list-main" data-role="list-menus" onclick="window.location='{% url 'sub_informasi_umum' item.id %}';">
+          <a href="" class="text-decoration-none text-reset">{{item.nama_folder}}</a>
+          <div>
+              <a href="#" class="btn btn-warning btn-card-menu">Edit</a>
+              <a href="#" class="btn btn-danger btn-card-menu">Delete</a>
+          </div>
+        </div>
       {%endfor%}
     </div>
   </section>
