--- a/Templates/InformasiUmum/SubInformasiUmum.html
+++ b/Templates/InformasiUmum/SubInformasiUmum.html
@@ -16,6 +16,8 @@
   <section class="page-title" style="margin-left: 17.9rem; ">
       <h3 class="font-weight-bold">{{judul.nama_folder}}</h3>
       <p class="font-weight-light">Universitas Prasetiya Mulya</p>
+
+      {%if judul.isAllowNewFile == True %}
       <a class="btn btn-primary" href="{% url 'AddFile_BukuPanduan' pk %}">
           <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-plus-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
@@ -23,6 +25,9 @@
           </svg>
           Add new file
       </a>
+      {% endif %}
+
+      {%if judul.isAllowNewFolder == True %}
       <a class="btn btn-primary" href="{% url 'AddSubFolder_01' pk %}">
         <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-plus-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
@@ -30,7 +35,10 @@
         </svg>
         Add new folder
       </a>
+      {% endif %}
   </section>
+
+
 
   <section class="folder-card">
     <div class="box-inside">
@@ -54,27 +62,21 @@
         </div>
       </div>
       {% endfor %}
+    </div>
+    </div>
+  </section>
+
+  <section class="page-title" style="margin-left: 17.9rem; margin-right: 4rem;">
+    <div class="list-group">
       {% for itemfolder in subfolder1 %}
-      <div class="col-sm-6" data-role="card-menus">
-        <div class="card card3">
-          <img src="https://images.unsplash.com/photo-1544396821-4dd40b938ad3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1053&q=80" class="card-img-top card3-img" alt="">
-          <div class="card-body">
-            <div class="card-inside">
-                <div class="card-text-inside">
-                    <h5 class="card-title">{{itemfolder.nama_folder}}</h5>
-                    <p class="card-text">Ini subtitle</p>
-                </div>
-                <div>
-                    <a href="{% url 'sub_folder_informasi_umum1' itemfolder.id %}" class="btn btn-success mr-3 btn-card-menu">Open</a>
-                    <a href="{% url 'UpdateSubFolder_01' itemfolder.id %}" class="btn btn-warning mr-3 btn-card-menu">Edit</a>
-                    <a href="{% url 'DeleteSubFolder_01' itemfolder.id %}" class="btn btn-danger mr-3 btn-card-menu">Delete</a>
-                </div>
-            </div>
+        <div type="button" class="list-group-item list-group-item-action button list-main" data-role="list-menus" onclick="window.location='{% url 'sub_folder_informasi_umum1' itemfolder.id %}';">
+          <a href="" class="text-decoration-none text-reset">{{itemfolder.nama_folder}}</a>
+          <div>
+              <a href="{% url 'UpdateSubFolder_01' itemfolder.id %}" class="btn btn-warning btn-card-menu">Edit</a>
+              <a href="{% url 'DeleteSubFolder_01' itemfolder.id %}" class="btn btn-danger btn-card-menu">Delete</a>
           </div>
         </div>
-      </div>
-      {% endfor %}
-    </div>
+      {%endfor%}
     </div>
   </section>
 
