--- a/Templates/Account/Register.html
+++ b/Templates/Account/Register.html
@@ -2,10 +2,19 @@
 {% block content %}
 
 <section class="page-title" style="margin-left: 17.9rem; ">
-    <h3 class="font-weight-bold">Edit Akun</h3>
+    <h3 class="font-weight-bold">Daftar Akun</h3>
     <p class="font-weight-light">Universitas Prasetiya Mulya</p>
 </section>
 
+<section class="form-area">
+    <div class="box-inside">
+        <form method="POST" class="mt-4" enctype="multipart/form-data">
+            {% csrf_token %}
+                {{form.as_p}}
+                <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </div> 
+</section>
 {% endblock %}
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
