add prodi name supaya lebih indah

--- a/Templates/Akreditasi/FolderAdd.html
+++ b/Templates/Akreditasi/FolderAdd.html
@@ -5,7 +5,7 @@
         
         <!--Ini yang dipake-->
         <section class="page-title">
-          <h3 class="font-weight-bold">Add New Folder</h3>
+          <h5 class="font-weight-bold">Add New Folder in {{prodi_name}}</h5>
         </section>
 
         
